@@ -23,12 +23,12 @@ convolutions = [
 # padding_mode (string, optional) - 'zeros', 'reflect', 'replicate' or 'circular'. Default: 'zeros
 
 # Unsupported
-conv_1D = []  # torch.nn.Conv1d, torch.nn.ConvTranspose1d]
-conv_3D = []  # torch.nn.Conv3d, torch.nn.ConvTranspose3d]
 folds = []  # torch.nn.Unfold, torch.nn.Fold,
 
 # Supported.
-conv_2D = [torch.nn.Conv2d]  # ], torch.nn.ConvTranspose2d]
+conv_1D = [torch.nn.Conv1d]  # torch.nn.ConvTranspose1d]
+conv_2D = [torch.nn.Conv2d]  # torch.nn.ConvTranspose2d]
+conv_3D = [torch.nn.Conv3d]  # torch.nn.ConvTranspose3d]
 
 
 def execute_and_check_wrapper(model, input):
@@ -42,7 +42,6 @@ def execute_and_check_wrapper(model, input):
     torch.testing.assert_allclose(poptorch_out, nativeOut)
 
 
-# NO 1D OPS CURRENTLY SUPPORTED
 @pytest.mark.parametrize("op", conv_1D)
 def test_conv1D(op):
 
@@ -55,11 +54,11 @@ def test_conv1D(op):
     execute_and_check_wrapper(model, input)
 
     # # non-square kernels and unequal stride and with padding
-    model = op(16, 33, (3, 5), stride=(2), padding=(4))
+    model = op(16, 33, kernel_size=(3), stride=(2), padding=(4))
     execute_and_check_wrapper(model, input)
 
     # # non-square kernels and unequal stride and with padding and dilation
-    model = op(16, 33, (3, 5), stride=(2), padding=(4), dilation=(3))
+    model = op(16, 33, (3), stride=(2), padding=(4), dilation=(3))
     execute_and_check_wrapper(model, input)
 
 
@@ -75,31 +74,30 @@ def test_conv2D(op):
     execute_and_check_wrapper(model, input)
 
     # non-square kernels and unequal stride and with padding
-    model = op(16, 33, (3, 5), stride=(2, 1), padding=(4, 2))
+    model = op(16, 33, (3, 5), stride=(2), padding=(4, 2))
     execute_and_check_wrapper(model, input)
 
     # non-square kernels and unequal stride and with padding and dilation
-    model = op(16, 33, (3, 5), stride=(2, 1), padding=(4, 2), dilation=(3, 1))
+    model = op(16, 33, (3, 5), stride=(2, 1), padding=(4, 2), dilation=(3))
     execute_and_check_wrapper(model, input)
 
 
-# NO 3D OPS CURRENTLY SUPPORTED
 @pytest.mark.parametrize("op", conv_3D)
 def test_conv3D(op):
     torch.manual_seed(42)
-    input = torch.randn(20, 16, 3, 50, 10)
+    input = torch.randn(2, 4, 3, 5, 10)
 
     # With square kernels and equal stride
-    model = op(16, 33, 3, stride=2)
+    model = op(4, 6, 3, stride=2)
     execute_and_check_wrapper(model, input)
 
     # non-square kernels and unequal stride and with padding
-    model = op(16, 33, (3, 5), stride=(2, 1, 1), padding=(4, 2, 0))
+    model = op(4, 6, (3, 2, 2), stride=(2, 1, 1), padding=(4, 2, 0))
     execute_and_check_wrapper(model, input)
 
     # non-square kernels and unequal stride and with padding and dilation
-    model = op(16,
-               33, (3, 5),
+    model = op(4,
+               6, (3, 4, 2),
                stride=(2, 1, 1),
                padding=(4, 2, 0),
                dilation=(3, 1, 1))
